# gallery

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: repo_meta.yml
.github/workflows/: pre-commit.yml  run-refresh-pipeline.yml  validate-component-definitions.yml
components/registry/: README.md
components/registry/compiled/: components.json
components/registry/components/: audio-recorder-streamlit.json  barfi.json  coinmarketcap-connection.json  elyra-streamlit-extension.json  extra-streamlit-components.json  hiplot.json  hydralit-components.json  msal-streamlit-authentication-dentro.json  msal-streamlit-authentication.json  multipage-streamlit.json  nlu.json  plost.json  pygwalker.json  spacy-streamlit.json  st-agraph-symrzknr.json  st-airtable-connection.json  st-annotated-text.json  st-ant-tree.json  st-btn-select.json  st-card-component.json  st-chat-message.json  st-click-detector.json  st-clickable-images.json  st-cockroachdb-connection.json  st-cytoscape.json  st-deta-connection.json  st-dynamodb-connection.json  st-echarts-events.json  st-execbox.json  st-files-connection.json  st-gsheets-connection.json  st-kaggle-connector.json  st-login-form.json  st-material-table.json  st-milvus-connection.json  st-mongo-connection.json  st-mui-multiselect.json  st-newsapi-connector.json  st-openai-embeddings-connection.json  st-pages.json  (+160 more)
components/registry/schemas/: compiled.schema.json  component.schema.json
components/registry/scripts/: build_catalog.py  compute_ranking.py  enrich.py  enrich_images.py  run_pipeline.py  (+1 more)
(+11 files in other folders)
