[project]
name = "gallery"
version = "0.0.0"
description = "Metadata repo for Streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.1",
    "requests>=2.32.0",
]

[dependency-groups]
dev = ["pre-commit", "ruff"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
